[gd_scene load_steps=15 format=3 uid="uid://dhy2c3qh7bhrl"]

[ext_resource type="Script" path="res://Scripts/UI/pause_menu.gd" id="1_dkwbe"]
[ext_resource type="FontFile" uid="uid://cejipfrgvlr25" path="res://Assets/Fonts/main.ttf" id="1_epsu2"]
[ext_resource type="Theme" uid="uid://4bv1mxp5rkqk" path="res://Resources/button_ui.tres" id="3_0b88x"]
[ext_resource type="LabelSettings" uid="uid://ceef1murwut4i" path="res://Assets/Fonts/Font Styles/Medium.tres" id="3_aq7cx"]
[ext_resource type="Script" path="res://Scripts/UI/bouncy_button.gd" id="4_rrhu0"]
[ext_resource type="Script" path="res://Scripts/controls.gd" id="4_w80sp"]
[ext_resource type="Resource" uid="uid://bvk42xy6rkbdr" path="res://Resources/default_keybinds.tres" id="5_3k7vs"]
[ext_resource type="LabelSettings" uid="uid://btgmmh81cnotg" path="res://Assets/Fonts/Font Styles/Small.tres" id="5_icmgu"]
[ext_resource type="LabelSettings" uid="uid://b8ki582y8fda5" path="res://Assets/Fonts/Font Styles/Info.tres" id="6_6ih8y"]
[ext_resource type="Script" path="res://Scripts/custom_controls.gd" id="8_0namw"]
[ext_resource type="FontFile" uid="uid://biclhtqfu4mgj" path="res://Assets/Fonts/config.ttf" id="8_q8d13"]
[ext_resource type="Script" path="res://Scripts/UI/input_button.gd" id="9_tjw1b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rdqyn"]
bg_color = Color(0, 0, 0, 0.462745)

[sub_resource type="LabelSettings" id="LabelSettings_8vvx3"]
font = ExtResource("1_epsu2")
font_size = 116
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dkwbe")
main_menu = "res://Scenes/mainmenu.tscn"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rdqyn")

[node name="PAUSED" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="PAUSED"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PAUSED/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PAUSED/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
label_settings = SubResource("LabelSettings_8vvx3")

[node name="OpenSettings" type="Button" parent="PAUSED/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(201.705, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_0b88x")
theme_override_fonts/font = ExtResource("8_q8d13")
theme_override_font_sizes/font_size = 36
text = "Settings"
script = ExtResource("4_rrhu0")

[node name="MainMenu" type="Button" parent="PAUSED/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(217.165, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_0b88x")
theme_override_font_sizes/font_size = 36
text = "Main Menu"
script = ExtResource("4_rrhu0")

[node name="Settings" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
layout_mode = 2

[node name="RTX" type="CheckButton" parent="Settings/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(186.645, 0)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Temporarily disabled as of v2.0.0"
focus_mode = 0
theme = ExtResource("3_0b88x")
theme_override_font_sizes/font_size = 40
disabled = true
text = " RTX"

[node name="Cinematic" type="CheckButton" parent="Settings/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(306.76, 0)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Temporarily disabled as of v2.0.0"
focus_mode = 0
theme = ExtResource("3_0b88x")
theme_override_font_sizes/font_size = 40
disabled = true
text = " CINEMATIC"

[node name="Label" type="Label" parent="Settings/VBoxContainer"]
layout_mode = 2
text = "HANDLING"
label_settings = ExtResource("3_aq7cx")
horizontal_alignment = 1

[node name="arr" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2
tooltip_text = "Automatic Repeat Rate: the speed at which tetrominoes move when holding down movement keys, measured in frames per movement"
alignment = 1

[node name="Label" type="Label" parent="Settings/VBoxContainer/arr"]
layout_mode = 2
size_flags_horizontal = 0
text = "ARR"
label_settings = ExtResource("5_icmgu")

[node name="ARRSlider" type="HSlider" parent="Settings/VBoxContainer/arr"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("3_0b88x")
min_value = 1.0
max_value = 5.0
value = 2.0
rounded = true

[node name="ARRLineEdit" type="SpinBox" parent="Settings/VBoxContainer/arr"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("3_0b88x")
max_value = 5.0
value = 2.0
rounded = true
suffix = "F"

[node name="das" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2
tooltip_text = "Delayed Auto Shift: the time between the initial keypress and the start of its automatic repeat movement, measured in frames"
alignment = 1

[node name="Label" type="Label" parent="Settings/VBoxContainer/das"]
layout_mode = 2
text = "DAS
"
label_settings = ExtResource("5_icmgu")

[node name="DASSlider" type="HSlider" parent="Settings/VBoxContainer/das"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("3_0b88x")
min_value = 1.0
max_value = 20.0
value = 10.0
rounded = true

[node name="DASLineEdit" type="SpinBox" parent="Settings/VBoxContainer/das"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_0b88x")
min_value = 1.0
max_value = 20.0
value = 10.0
rounded = true
suffix = "F"

[node name="dcd" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2
tooltip_text = "DAS Cut Delay: if not 0, any ongoing DAS movement will pause for a set amount of time after dropping/rotating a piece, measured in frames"
alignment = 1

[node name="Label" type="Label" parent="Settings/VBoxContainer/dcd"]
layout_mode = 2
size_flags_horizontal = 3
text = "DCD
"
label_settings = ExtResource("5_icmgu")

[node name="DCDSlider" type="HSlider" parent="Settings/VBoxContainer/dcd"]
unique_name_in_owner = true
custom_minimum_size = Vector2(191.845, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("3_0b88x")
max_value = 20.0
value = 1.0
rounded = true

[node name="DCDLineEdit" type="SpinBox" parent="Settings/VBoxContainer/dcd"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_0b88x")
max_value = 20.0
value = 1.0
rounded = true

[node name="sdf" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
tooltip_text = "Soft Drop Factor: the factor with which soft drops change the gravity speed"
alignment = 1

[node name="Label" type="Label" parent="Settings/VBoxContainer/sdf"]
layout_mode = 2
size_flags_horizontal = 0
text = "SDF 
"
label_settings = ExtResource("5_icmgu")

[node name="SDFSlider" type="HSlider" parent="Settings/VBoxContainer/sdf"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("3_0b88x")
min_value = 5.0
max_value = 30.0
value = 6.0
rounded = true

[node name="SDFLineEdit" type="SpinBox" parent="Settings/VBoxContainer/sdf"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_0b88x")
min_value = 5.0
max_value = 30.0
value = 6.0
rounded = true
suffix = "F"

[node name="Sonic" type="CheckButton" parent="Settings/VBoxContainer"]
custom_minimum_size = Vector2(186.385, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme = ExtResource("3_0b88x")
theme_override_font_sizes/font_size = 30
text = " Sonic"

[node name="SwitchToControls" type="Button" parent="Settings/VBoxContainer"]
custom_minimum_size = Vector2(311.845, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme = ExtResource("3_0b88x")
theme_override_fonts/font = ExtResource("8_q8d13")
theme_override_font_sizes/font_size = 30
text = "Customize Controls"
script = ExtResource("4_rrhu0")

[node name="Controls" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_0b88x")
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 70
script = ExtResource("4_w80sp")
keybind_resource = ExtResource("5_3k7vs")

[node name="KeybindPresets" type="TabContainer" parent="Controls" groups=["KeybindPresets"]]
layout_mode = 2
theme_override_font_sizes/font_size = 21
tab_alignment = 1
current_tab = 0
tab_focus_mode = 0

[node name="WASD" type="MarginContainer" parent="Controls/KeybindPresets"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Controls/KeybindPresets/WASD"]
layout_mode = 2

[node name="MoveLeft" type="HBoxContainer" parent="Controls/KeybindPresets/WASD/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Controls/KeybindPresets/WASD/VBoxContainer/MoveLeft"]
layout_mode = 2
size_flags_horizontal = 2
text = "Move Piece Left"
label_settings = ExtResource("5_icmgu")

[node name="Label2" type="Label" parent="Controls/KeybindPresets/WASD/VBoxContainer/MoveLeft"]
layout_mode = 2
size_flags_horizontal = 10
text = "A"
label_settings = ExtResource("6_6ih8y")

[node name="MoveRight" type="HBoxContainer" parent="Controls/KeybindPresets/WASD/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Controls/KeybindPresets/WASD/VBoxContainer/MoveRight"]
layout_mode = 2
size_flags_horizontal = 2
text = "Move Piece Right"
label_settings = ExtResource("5_icmgu")

[node name="Label2" type="Label" parent="Controls/KeybindPresets/WASD/VBoxContainer/MoveRight"]
layout_mode = 2
size_flags_horizontal = 10
text = "D"
label_settings = ExtResource("6_6ih8y")

[node name="SoftDrop" type="HBoxContainer" parent="Controls/KeybindPresets/WASD/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Controls/KeybindPresets/WASD/VBoxContainer/SoftDrop"]
layout_mode = 2
size_flags_horizontal = 2
text = "Soft Drop"
label_settings = ExtResource("5_icmgu")

[node name="Label2" type="Label" parent="Controls/KeybindPresets/WASD/VBoxContainer/SoftDrop"]
layout_mode = 2
size_flags_horizontal = 10
text = "W"
label_settings = ExtResource("6_6ih8y")

[node name="HardDrop" type="HBoxContainer" parent="Controls/KeybindPresets/WASD/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Controls/KeybindPresets/WASD/VBoxContainer/HardDrop"]
layout_mode = 2
size_flags_horizontal = 2
text = "Hard Drop"
label_settings = ExtResource("5_icmgu")

[node name="Label2" type="Label" parent="Controls/KeybindPresets/WASD/VBoxContainer/HardDrop"]
layout_mode = 2
size_flags_horizontal = 10
text = "S"
label_settings = ExtResource("6_6ih8y")

[node name="CCW" type="HBoxContainer" parent="Controls/KeybindPresets/WASD/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Controls/KeybindPresets/WASD/VBoxContainer/CCW"]
layout_mode = 2
size_flags_horizontal = 2
text = "Rotate Counterclockwise"
label_settings = ExtResource("5_icmgu")

[node name="Label2" type="Label" parent="Controls/KeybindPresets/WASD/VBoxContainer/CCW"]
layout_mode = 2
size_flags_horizontal = 10
text = "Left Arrow"
label_settings = ExtResource("6_6ih8y")

[node name="CW" type="HBoxContainer" parent="Controls/KeybindPresets/WASD/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Controls/KeybindPresets/WASD/VBoxContainer/CW"]
layout_mode = 2
size_flags_horizontal = 2
text = "Rotate Clockwise"
label_settings = ExtResource("5_icmgu")

[node name="Label2" type="Label" parent="Controls/KeybindPresets/WASD/VBoxContainer/CW"]
layout_mode = 2
size_flags_horizontal = 10
text = "Right Arrow"
label_settings = ExtResource("6_6ih8y")

[node name="Hold" type="HBoxContainer" parent="Controls/KeybindPresets/WASD/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Controls/KeybindPresets/WASD/VBoxContainer/Hold"]
layout_mode = 2
size_flags_horizontal = 2
text = "Hold Piece"
label_settings = ExtResource("5_icmgu")

[node name="Label2" type="Label" parent="Controls/KeybindPresets/WASD/VBoxContainer/Hold"]
layout_mode = 2
size_flags_horizontal = 10
text = "Shift"
label_settings = ExtResource("6_6ih8y")

[node name="Arrow Keys" type="MarginContainer" parent="Controls/KeybindPresets"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Controls/KeybindPresets/Arrow Keys"]
layout_mode = 2

[node name="MoveLeft" type="HBoxContainer" parent="Controls/KeybindPresets/Arrow Keys/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Controls/KeybindPresets/Arrow Keys/VBoxContainer/MoveLeft"]
layout_mode = 2
size_flags_horizontal = 2
text = "Move Piece Left"
label_settings = ExtResource("5_icmgu")

[node name="Label2" type="Label" parent="Controls/KeybindPresets/Arrow Keys/VBoxContainer/MoveLeft"]
layout_mode = 2
size_flags_horizontal = 10
text = "Left Arrow"
label_settings = ExtResource("6_6ih8y")

[node name="MoveRight" type="HBoxContainer" parent="Controls/KeybindPresets/Arrow Keys/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Controls/KeybindPresets/Arrow Keys/VBoxContainer/MoveRight"]
layout_mode = 2
size_flags_horizontal = 2
text = "Move Piece Right"
label_settings = ExtResource("5_icmgu")

[node name="Label2" type="Label" parent="Controls/KeybindPresets/Arrow Keys/VBoxContainer/MoveRight"]
layout_mode = 2
size_flags_horizontal = 10
text = "Right Arrow"
label_settings = ExtResource("6_6ih8y")

[node name="SoftDrop" type="HBoxContainer" parent="Controls/KeybindPresets/Arrow Keys/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Controls/KeybindPresets/Arrow Keys/VBoxContainer/SoftDrop"]
layout_mode = 2
size_flags_horizontal = 2
text = "Soft Drop"
label_settings = ExtResource("5_icmgu")

[node name="Label2" type="Label" parent="Controls/KeybindPresets/Arrow Keys/VBoxContainer/SoftDrop"]
layout_mode = 2
size_flags_horizontal = 10
text = "Down Arrow"
label_settings = ExtResource("6_6ih8y")

[node name="HardDrop" type="HBoxContainer" parent="Controls/KeybindPresets/Arrow Keys/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Controls/KeybindPresets/Arrow Keys/VBoxContainer/HardDrop"]
layout_mode = 2
size_flags_horizontal = 2
text = "Hard Drop"
label_settings = ExtResource("5_icmgu")

[node name="Label2" type="Label" parent="Controls/KeybindPresets/Arrow Keys/VBoxContainer/HardDrop"]
layout_mode = 2
size_flags_horizontal = 10
text = "Space"
label_settings = ExtResource("6_6ih8y")

[node name="CCW" type="HBoxContainer" parent="Controls/KeybindPresets/Arrow Keys/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Controls/KeybindPresets/Arrow Keys/VBoxContainer/CCW"]
layout_mode = 2
size_flags_horizontal = 2
text = "Rotate Counterclockwise"
label_settings = ExtResource("5_icmgu")

[node name="Label2" type="Label" parent="Controls/KeybindPresets/Arrow Keys/VBoxContainer/CCW"]
layout_mode = 2
size_flags_horizontal = 10
text = "Z"
label_settings = ExtResource("6_6ih8y")

[node name="CW" type="HBoxContainer" parent="Controls/KeybindPresets/Arrow Keys/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Controls/KeybindPresets/Arrow Keys/VBoxContainer/CW"]
layout_mode = 2
size_flags_horizontal = 2
text = "Rotate Clockwise"
label_settings = ExtResource("5_icmgu")

[node name="Label2" type="Label" parent="Controls/KeybindPresets/Arrow Keys/VBoxContainer/CW"]
layout_mode = 2
size_flags_horizontal = 10
text = "X"
label_settings = ExtResource("6_6ih8y")

[node name="Hold" type="HBoxContainer" parent="Controls/KeybindPresets/Arrow Keys/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Controls/KeybindPresets/Arrow Keys/VBoxContainer/Hold"]
layout_mode = 2
size_flags_horizontal = 2
text = "Hold Piece"
label_settings = ExtResource("5_icmgu")

[node name="Label2" type="Label" parent="Controls/KeybindPresets/Arrow Keys/VBoxContainer/Hold"]
layout_mode = 2
size_flags_horizontal = 10
text = "Shift"
label_settings = ExtResource("6_6ih8y")

[node name="Custom" type="MarginContainer" parent="Controls/KeybindPresets"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50
script = ExtResource("8_0namw")
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Controls/KeybindPresets/Custom"]
layout_mode = 2

[node name="MoveLeft" type="HBoxContainer" parent="Controls/KeybindPresets/Custom/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Controls/KeybindPresets/Custom/VBoxContainer/MoveLeft"]
layout_mode = 2
size_flags_horizontal = 2
text = "Move Piece Left"
label_settings = ExtResource("5_icmgu")

[node name="SetLeft" type="Button" parent="Controls/KeybindPresets/Custom/VBoxContainer/MoveLeft"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96.62, 42.725)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("8_q8d13")
theme_override_font_sizes/font_size = 20
text = "[set]"
script = ExtResource("9_tjw1b")

[node name="MoveRight" type="HBoxContainer" parent="Controls/KeybindPresets/Custom/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Controls/KeybindPresets/Custom/VBoxContainer/MoveRight"]
layout_mode = 2
size_flags_horizontal = 2
text = "Move Piece Right"
label_settings = ExtResource("5_icmgu")

[node name="SetRight" type="Button" parent="Controls/KeybindPresets/Custom/VBoxContainer/MoveRight"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96.62, 42.725)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("8_q8d13")
theme_override_font_sizes/font_size = 20
text = "[set]"
script = ExtResource("9_tjw1b")

[node name="SoftDrop" type="HBoxContainer" parent="Controls/KeybindPresets/Custom/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Controls/KeybindPresets/Custom/VBoxContainer/SoftDrop"]
layout_mode = 2
size_flags_horizontal = 2
text = "Soft Drop"
label_settings = ExtResource("5_icmgu")

[node name="SetSoft" type="Button" parent="Controls/KeybindPresets/Custom/VBoxContainer/SoftDrop"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96.62, 42.725)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("8_q8d13")
theme_override_font_sizes/font_size = 20
text = "[set]"
script = ExtResource("9_tjw1b")

[node name="HardDrop" type="HBoxContainer" parent="Controls/KeybindPresets/Custom/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Controls/KeybindPresets/Custom/VBoxContainer/HardDrop"]
layout_mode = 2
size_flags_horizontal = 2
text = "Hard Drop"
label_settings = ExtResource("5_icmgu")

[node name="SetHard" type="Button" parent="Controls/KeybindPresets/Custom/VBoxContainer/HardDrop"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96.62, 42.725)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("8_q8d13")
theme_override_font_sizes/font_size = 20
text = "[set]"
script = ExtResource("9_tjw1b")

[node name="CCW" type="HBoxContainer" parent="Controls/KeybindPresets/Custom/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Controls/KeybindPresets/Custom/VBoxContainer/CCW"]
layout_mode = 2
size_flags_horizontal = 2
text = "Rotate Counterclockwise"
label_settings = ExtResource("5_icmgu")

[node name="SetCCW" type="Button" parent="Controls/KeybindPresets/Custom/VBoxContainer/CCW"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96.62, 42.725)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("8_q8d13")
theme_override_font_sizes/font_size = 20
text = "[set]"
script = ExtResource("9_tjw1b")

[node name="CW" type="HBoxContainer" parent="Controls/KeybindPresets/Custom/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Controls/KeybindPresets/Custom/VBoxContainer/CW"]
layout_mode = 2
size_flags_horizontal = 2
text = "Rotate Clockwise"
label_settings = ExtResource("5_icmgu")

[node name="SetCW" type="Button" parent="Controls/KeybindPresets/Custom/VBoxContainer/CW"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96.62, 42.725)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("8_q8d13")
theme_override_font_sizes/font_size = 20
text = "[set]"
script = ExtResource("9_tjw1b")

[node name="Hold" type="HBoxContainer" parent="Controls/KeybindPresets/Custom/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Controls/KeybindPresets/Custom/VBoxContainer/Hold"]
layout_mode = 2
size_flags_horizontal = 2
text = "Hold Piece"
label_settings = ExtResource("5_icmgu")

[node name="SetHold" type="Button" parent="Controls/KeybindPresets/Custom/VBoxContainer/Hold"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96.62, 42.725)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("8_q8d13")
theme_override_font_sizes/font_size = 20
text = "[set]"
script = ExtResource("9_tjw1b")

[connection signal="pressed" from="PAUSED/CenterContainer/VBoxContainer/OpenSettings" to="." method="_on_open_settings_pressed"]
[connection signal="pressed" from="PAUSED/CenterContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="toggled" from="Settings/VBoxContainer/RTX" to="." method="_on_rtx_toggled"]
[connection signal="toggled" from="Settings/VBoxContainer/Cinematic" to="." method="_on_cinematic_toggled"]
[connection signal="toggled" from="Settings/VBoxContainer/Sonic" to="." method="_on_sonic_toggled"]
[connection signal="pressed" from="Settings/VBoxContainer/SwitchToControls" to="." method="_on_switch_to_controls_pressed"]
[connection signal="tab_changed" from="Controls/KeybindPresets" to="Controls" method="_on_tab_container_tab_changed"]
[connection signal="updated_keybinds" from="Controls/KeybindPresets/Custom" to="Controls" method="_on_custom_updated_keybinds"]
